--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
 	"name": "react-crossword",
 	"homepage": "http://JaredReisinger.github.io/react-crossword",
 	"version": "0.0.1",
-	"description": A flexible, responsive, and easy-to-use crossword component for React apps,
+	"description": "A flexible, responsive, and easy-to-use crossword component for React apps",
+	"author": {
+		"name": "JaredReisinger",
+		"email": "jaredreisinger@hotmail.com"
+	},
+	"keywords": [
+		"react",
+		"react-crossword",
+		"library"
+	],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/JaredReisinger/react-crossword"
 	},
-	"main": "dist/cjs/index",
-	"module": "dist/es/index",
-	
-	"sideEffects": false,
-	"author": {
-		"name": "JaredReisinger",
-		"email": ""
+	"license": "MIT",
+	"engines": {
+		"node": ">=8.0.0"
 	},
+	"main": "dist/cjs",
+	"module": "dist/es",
+	"sideEffects": false,
 	"scripts": {
 		"installPeer": "node build-tool/peerDep.js",
 		"test": "jest",
@@ -26,24 +34,14 @@
 		"release:tags": "git push --follow-tags origin master",
 		"build": "node build-tool/build.js",
 		"pre-publish": "npm run lint && npm run build",
-		"publish": "npm run pre-publish && npm publish"
-		,"doc:dev": "  styleguidist server",
-		"doc:build": "  styleguidist build",
+		"publish": "npm run pre-publish && npm publish",
+		"doc:dev": "styleguidist server",
+		"doc:build": "styleguidist build",
 		"doc:deploy": "npm run doc:build && gh-pages -d docs"
 	},
 	"files": [
 		"dist"
 	],
-	"peerDependencies": {
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"prop-types": "^15.7.2"
-		,"styled-components": "^4.4.1"
-	},
-	"license": "MIT",
-	"engines": {
-		"node": ">=8.0.0"
-	},
 	"husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
@@ -79,55 +77,54 @@
 		"babel-eslint": "^10.0.3",
 		"babel-jest": "^24.9.0",
 		"babel-plugin-minify-dead-code-elimination": "^0.5.1",
+		"babel-plugin-styled-components": "^1.10.6",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"commitizen": "^4.0.3",
-		"eslint": "^6.6.0",
-		"eslint-config-airbnb": "^18.0.1",
+		"concurrently": "^5.0.0",
+		"cross-spawn": "^7.0.1",
 		"eslint-config-airbnb-base": "^14.0.0",
+		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.7.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.1",
-		"eslint-plugin-react": "^7.16.0",
 		"eslint-plugin-react-hooks": "^1.0.1",
+		"eslint-plugin-react": "^7.16.0",
+		"eslint": "^6.6.0",
+		"gh-pages": "^2.1.1",
+		"glob": "^7.1.6",
 		"husky": "^3.0.9",
+		"inflected": "^2.0.4",
 		"jest": "^24.9.0",
 		"lint-staged": "^9.4.2",
 		"prettier": "^1.19.1",
 		"pretty-quick": "^2.0.1",
+		"prop-types": "^15.7.2",
+		"react-dom": "^16.12.0",
+		"react-styleguidist": "^10.2.1",
 		"react-test-renderer": "^16.12.0",
-		"rollup": "^1.26.5",
+		"react": "^16.12.0",
+		"read-pkg-up": "^7.0.0",
+		"rimraf": "^3.0.0",
 		"rollup-plugin-babel": "^4.3.3",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
 		"rollup-plugin-size-snapshot": "^0.10.0",
 		"rollup-plugin-terser": "^5.1.2",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"prop-types": "^15.7.2",
+		"rollup": "^1.26.5",
 		"standard-version": "^7.0.0",
-		"stylelint": "^12.0.0",
+		"styled-components": "^4.4.1",
 		"stylelint-config-standard": "^19.0.0",
-		"concurrently": "^5.0.0",
-		"cross-spawn": "^7.0.1",
-		"glob": "^7.1.6",
-		"inflected": "^2.0.4",
-		"read-pkg-up": "^7.0.0",
-		"rimraf": "^3.0.0",
+		"stylelint": "^12.0.0",
+		"webpack-blocks": "^2.0.1",
 		"which": "^2.0.2",
 		"yargs-parser": "^16.1.0"
-		,"styled-components": "^4.4.1",
-		"babel-plugin-styled-components": "^1.10.6"
-			,"react-styleguidist": "^10.2.1",
-			"webpack-blocks": "^2.0.1"
-		,"gh-pages": "^2.1.1"
-		
-		
 	},
-	"keywords": [
-		"react",
-		"react-crossword",
-		"library"
-	]
+	"peerDependencies": {
+		"prop-types": "^15.7.2",
+		"react-dom": "^16.12.0",
+		"react": "^16.12.0",
+		"styled-components": "^4.4.1"
+	}
 }
