chore: clean up style tools and formatting

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"installPeer": "node build-tool/peerDep.js",
 		"test": "jest",
 		"test:dev": "jest --watch",
-		"lint": "eslint src/**/*.{js,jsx} --fix",
-		"stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less} --fix",
+		"lint": "eslint src/**/*.{js,jsx}",
+		"stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less}",
 		"commit": "git-cz",
 		"release": "standard-version",
 		"release:tags": "git push --follow-tags origin master",
@@ -115,7 +115,9 @@
 		"rollup": "^1.26.5",
 		"standard-version": "^7.0.0",
 		"styled-components": "^4.4.1",
+		"stylelint-config-prettier": "^8.0.0",
 		"stylelint-config-standard": "^19.0.0",
+		"stylelint-prettier": "^1.1.2",
 		"stylelint": "^12.0.0",
 		"webpack-blocks": "^2.0.1",
 		"which": "^2.0.2",
