--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -2,6 +2,8 @@ plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - '@semantic-release/changelog'
-  - '@semantic-release/npm'
+  -
+    - '@semantic-release/npm'
+    - npmPublish: false
   - '@semantic-release/github'
   - '@semantic-release/git'
