style: fix Stylelint/ESLint issues

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,6 +1,12 @@
 parser: babel-eslint
 
-extends: [airbnb, plugin:react/recommended, plugin:prettier/recommended, prettier/react]
+extends:
+  [
+    airbnb,
+    plugin:react/recommended,
+    plugin:prettier/recommended,
+    prettier/react,
+  ]
 
 env:
   browser: true
@@ -22,13 +28,30 @@ parserOptions:
 #       extensions: [.js, .mjs]
 
 rules:
-  arrow-parens: [error, as-needed]
+  arrow-parens:
+    - error
+    - as-needed
+  # no-continue:
   no-nested-ternary: off
+  no-param-reassign:
+    - error
+    - ignorePropertyModificationsFor:
+        - gridData
+        - cellData
+      ignorePropertyModificationsForRegex:
+        - ^memo
+  no-plusplus:
+    - error
+    - allowForLoopAfterthoughts: true
+  no-unused-vars:
+    - error
+    - argsIgnorePattern: ^[a-z]|props$
+  no-use-before-define: off
   react/jsx-filename-extension:
     - error
     - extensions: [.js, .jsx]
   react/jsx-props-no-spreading: off
-
+  react/sort-comp: off
 # overrides:
 #   - files: ['test/**', '**/*.spec.mjs']
 #     rules:
