feat: tweaks and adjustment for preliminary release
Enough of the process should be in place for an initial full release of the component and
documentation.  Fingers crossed!

--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "example",
-  "version": "0.1.0",
+  "name": "react-crossword-example",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@jaredreisinger/react-crossword": "file:..",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-crossword": "file:.."
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
