--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,17 @@ jobs:
       deploy:
         provider: script
         skip_cleanup: true
-        script: npm run release && npm run doc:deploy
+        script: npm run release
+
+    - stage: release
+      node_js: lts/*
+      if: branch = master
+      script: npm run doc:build
+      deploy:
+        provider: pages
+        skip_cleanup: true
+        github_token: $GH_TOKEN
+        keep_history: true
+        on:
+          branch: master
+        local_dir: docs
