--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@semantic-release/git": "^9.0.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^10.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
