docs: add title image
add pretty title image; move styleguidist to use the styleguide directory so that "docs" can be
reclaimed for actual docs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ jobs:
           keep_history: true
           on:
             branch: master
-          local_dir: docs
+          local_dir: styleguide
