--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 node_modules/
 
@@ -8,10 +6,7 @@ coverage/
 build/
 dist/
 .rpt2_cache
-
-#docs
-.docz
-docs/
+styleguide/
 
 
 # misc
