refactor(hooks): re-implement using React hooks
As a precursor to continued development, re-write using React hooks.  Some functionality that had
been bundled into Crossword has been split out, and overall test coverage improved.  Also, beginning
to use React Context for crossword rendering and helpers, and will eventually expose styling using
styled-components 'ThemeContext' (but not as of this commit).

BREAKING CHANGE: Switched to React hooks, and thus using React.forwardRef() on Crossword to expose
imperative commands (reset(), focus(), fillAllAnswers()).

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -28,9 +28,9 @@ parserOptions:
 #       extensions: [.js, .mjs]
 
 rules:
-  arrow-parens:
-    - error
-    - as-needed
+  # arrow-parens:
+  #   - error
+  #   - as-needed
   # no-continue:
   no-nested-ternary: off
   no-param-reassign:
