--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
       "eslint --fix --quiet --ignore-path .gitignore"
     ]
   },
+  "dependencies": {
+    "immer": "^6.0.5",
+    "styled-components": "^5.1.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
@@ -100,7 +104,6 @@
     "gh-pages": "^2.2.0",
     "glob": "^7.1.6",
     "husky": "^4.2.5",
-    "immer": "^6.0.5",
     "inflected": "^2.0.4",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.4",
@@ -121,7 +124,6 @@
     "rollup-plugin-size-snapshot": "^0.11.0",
     "rollup-plugin-terser": "^5.3.0",
     "semantic-release": "^17.0.7",
-    "styled-components": "^5.1.0",
     "stylelint": "^13.5.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended": "^3.0.0",
@@ -134,10 +136,9 @@
     "yargs-parser": "^18.1.3"
   },
   "peerDependencies": {
-    "immer": "6.x",
+    "@babel/runtime": "^7.9.6",
     "prop-types": "15.x",
     "react-dom": "16.x",
-    "react": "16.x",
-    "styled-components": "5.x"
+    "react": "16.x"
   }
 }
