--- a/package.json
+++ b/package.json
@@ -64,68 +64,68 @@
     ]
   },
   "dependencies": {
-    "immer": "^6.0.5",
-    "styled-components": "^5.1.0"
+    "immer": "^7.0.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@rollup/plugin-replace": "^2.3.2",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@rollup/plugin-replace": "^2.3.3",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.3.1",
+    "@testing-library/jest-dom": "^5.11.3",
+    "@testing-library/react": "^10.4.8",
+    "@testing-library/user-event": "^12.1.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.3.0",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-styled-components": "^1.11.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "codecov": "^3.7.0",
+    "codecov": "^3.7.2",
     "commitizen": "^4.1.2",
-    "concurrently": "^5.2.0",
-    "cross-spawn": "^7.0.2",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "concurrently": "^5.3.0",
+    "cross-spawn": "^7.0.3",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "gh-pages": "^2.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "gh-pages": "^3.1.0",
     "glob": "^7.1.6",
     "husky": "^4.2.5",
     "inflected": "^2.0.4",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.4",
+    "jest": "^26.3.0",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-styleguidist": "^11.0.6",
+    "react-styleguidist": "^11.0.8",
     "react-test-renderer": "^16.13.1",
     "read-pkg-up": "^7.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.10.5",
+    "rollup": "^2.23.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-size-snapshot": "^0.11.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "semantic-release": "^17.0.7",
-    "stylelint": "^13.5.0",
-    "stylelint-config-prettier": "^8.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.3",
+    "rollup-plugin-size-snapshot": "^0.12.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "semantic-release": "^17.1.1",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -133,10 +133,10 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "webpack-blocks": "^2.1.0",
     "which": "^2.0.2",
-    "yargs-parser": "^18.1.3"
+    "yargs-parser": "^19.0.1"
   },
   "peerDependencies": {
-    "@babel/runtime": "^7.9.6",
+    "@babel/runtime": "7.x",
     "prop-types": "15.x",
     "react-dom": "16.x",
     "react": "16.x"
