chore(commitizen): use commitizen by default to compose commit message

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "pre-commit": "pretty-quick --staged && lint-staged"
     }
   },
