chore(eslint): tweak eslint and rollup

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -3,6 +3,7 @@ parser: '@babel/eslint-parser'
 extends:
   - airbnb
   - plugin:react/recommended
+  - plugin:react/jsx-runtime
   - prettier
 
 env:
