--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "engines": {
     "node": ">=14.17.0"
   },
+  "type": "module",
   "main": "dist/NOT-SUPPORTED",
-  "module": "dist/es",
+  "module": "dist/",
   "sideEffects": false,
   "scripts": {
     "#installPeer": "node build-tool/peerDep.js",
@@ -35,7 +36,7 @@
     "commit": "git-cz",
     "codecov": "codecov",
     "release": "npm run build && semantic-release",
-    "build": "node build-tool/build.js",
+    "build": "tsc",
     "clean": "rimraf dist",
     "doc:dev": "styleguidist server",
     "doc:build": "styleguidist build",
@@ -68,33 +69,20 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.1",
-    "@rollup/plugin-replace": "^3.0.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "babel-jest": "^27.4.5",
-    "babel-plugin-minify-dead-code-elimination": "^0.5.1",
-    "babel-plugin-styled-components": "^2.0.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "codecov": "^3.8.3",
+    "@types/prop-types": "^15.7.4",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.19",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "commitizen": "^4.2.4",
-    "concurrently": "^6.5.1",
-    "cross-spawn": "^7.0.3",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -104,24 +92,14 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
-    "glob": "^7.2.0",
     "husky": "^7.0.0",
-    "inflected": "^2.1.0",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "prop-types": "^15.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-styleguidist": "^11.1.7",
     "react-test-renderer": "^17.0.2",
-    "read-pkg-up": "^9.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.61.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-size-snapshot": "^0.12.0",
-    "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^18.0.1",
     "snyk": "^1.809.0",
     "stylelint": "^14.2.0",
@@ -131,15 +109,11 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-prettier": "^2.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "webpack-blocks": "^2.1.0",
-    "which": "^2.0.2",
-    "yargs-parser": "^21.0.0"
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "@babel/runtime": "7.x",
-    "prop-types": "15.x",
-    "react": ">=16.x",
-    "react-dom": ">=16.x"
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2"
   },
   "snyk": true
 }
