--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
   "module": "dist/",
   "sideEffects": false,
   "scripts": {
-    "#installPeer": "node build-tool/peerDep.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:dev": "jest --watch",
-    "lint": "eslint src/**/*.{js,jsx}",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less}",
     "commit": "git-cz",
     "codecov": "codecov",
     "release": "npm run build && semantic-release",
     "build": "tsc",
-    "clean": "rimraf dist",
+    "dist": "npm run clean && npm run build",
+    "clean": "rimraf build dist",
     "doc:dev": "styleguidist server",
     "doc:build": "styleguidist build",
     "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
@@ -66,9 +66,12 @@
   },
   "dependencies": {
     "immer": "^9.0.7",
-    "styled-components": "^5.3.3"
+    "prop-types": "^15.8.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@semantic-release/changelog": "^6.0.1",
@@ -82,6 +85,8 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.19",
     "@types/testing-library__jest-dom": "^5.14.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "commitizen": "^4.2.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
@@ -97,7 +102,6 @@
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "prop-types": "^15.8.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "semantic-release": "^18.0.1",
@@ -113,7 +117,8 @@
   },
   "peerDependencies": {
     "react": ">=17.0.2",
-    "react-dom": ">=17.0.2"
+    "react-dom": ">=17.0.2",
+    "styled-components": ">=5.3.3"
   },
   "snyk": true
 }
