--- a/example/package.json
+++ b/example/package.json
@@ -2,19 +2,27 @@
   "name": "react-crossword-example",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@jaredreisinger/react-crossword": "file:..",
-    "immer": "file:../node_modules/immer",
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "3.4.3",
-    "styled-components": "file:../node_modules/styled-components"
-  },
+  "type": "commonjs",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@jaredreisinger/react-crossword": "file:..",
+    "immer": "file:../node_modules/immer",
+    "react": "file:../node_modules/react",
+    "react-dom": "file:../node_modules/react-dom",
+    "react-scripts": "5.0.0",
+    "styled-components": "file:../node_modules/styled-components"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.5.4"
   },
   "eslintConfig": {
     "extends": "react-app"
