ci: fix npm run commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
 
       - run: npm ci
 
-      - run: npm lint
+      - run: npm run lint
 
-      - run: npm test
+      - run: npm run test:coverage
 
       - run: npm run build
