--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less}",
     "commit": "git-cz",
-    "codecov": "codecov",
-    "release": "npm run build && semantic-release",
+    "#codecov": "codecov",
+    "release": "npm run dist && semantic-release",
     "build": "tsc",
     "dist": "npm run clean && npm run build",
     "clean": "rimraf build coverage dist",
-    "doc:dev": "styleguidist server",
-    "doc:build": "styleguidist build",
-    "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
+    "#doc:dev": "styleguidist server",
+    "#doc:build": "styleguidist build",
+    "#doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
     "#snyk-protect": "snyk protect",
     "#prepare": "npm run snyk-protect",
     "prepare": "husky install"
