--- a/package.json
+++ b/package.json
@@ -101,10 +101,13 @@
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "semantic-release": "^18.0.1",
     "snyk": "^1.809.0",
+    "styled-components": "^5.3.3",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^6.0.0",
