ci: tweak workflow again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - if: ${{ github.event_name == 'push' && startsWith(matrix.node-version, '14.') }}
         uses: codecov/codecov-action@v2
-        settings:
+        with:
           verbose: true
 
       - if: ${{ github.event_name == 'push' && startsWith(matrix.node-version, '14.') }}
