docs: reinstate styleguidist
resume using styleguidist with Typescript support added in

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -32,6 +32,9 @@ settings:
     node:
       extensions: [.js, .jsx, .ts, .tsx]
 
+ignorePatterns:
+  - styleguide.config.js
+
 rules:
   import/extensions:
     - error
