--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "react": "^17.0.2",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-styleguidist": "^11.1.7",
+    "react-styleguidist": "^12.0.0-alpha9.9",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "semantic-release": "^18.0.1",
