--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
     "#snyk-protect": "snyk protect",
     "#prepare": "npm run snyk-protect",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "files": [
     "/dist",
@@ -96,6 +96,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
+    "is-ci": "^3.0.1",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
