--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/testing-library__jest-dom": "^5.14.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "all-contributors-cli": "^6.20.0",
     "commitizen": "^4.2.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
